--- a/charts/meep-rnis/values-template.yaml
+++ b/charts/meep-rnis/values-template.yaml
@@ -11,7 +11,8 @@ deployment:
       {{- if not .IsMepService }}
       - kube-dns
       {{- end }}
-    sandbox:
+    namespace:
+      - meep-sandbox-ctrl
 
 image:
   repository: meep-docker-registry:30001/meep-rnis
@@ -22,6 +23,7 @@ image:
     NR_MEAS_REP_UE_PERIODIC_TRIGGER_INTERVAL: 1s
     MEEP_INSTANCE_ID: {{.InstanceId}}
     MEEP_SANDBOX_NAME: {{.SandboxName}}
+    MEEP_SVC_PATH: /rni/v2
     MEEP_HOST_URL: {{.HostUrl}}
     {{- if .IsMepService }}
     MEEP_MEP_NAME: {{.MepName}}
