--- a/charts/meep-tc-engine/values-template.yaml
+++ b/charts/meep-tc-engine/values-template.yaml
@@ -8,7 +8,10 @@ deployment:
   replicas: 1
   port: 80
   protocol: TCP
-  dependency: kube-dns
+  dependencies:
+    system:
+      - kube-dns
+    namespace:
 
 affinity:
   nodeAffinity:
