--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-version: 1.7.5
+version: 1.7.6
 repo:
   name: AdvantEDGE
 
@@ -202,11 +202,15 @@ repo:
         codecov: true
         # supports linting
         lint: true
-        # location of API specification
-        api: 
-          meep-auth-svc: go-apps/meep-auth-svc/api/swagger.yaml
-        # AdvantEDGE resources included in Docker container image
+        # location of API specifications
+        api:
+          'meep-auth-svc.yaml': go-apps/meep-auth-svc/api/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
         docker-data:
+          # location of entry script
+          'entrypoint.sh': go-apps/meep-auth-svc/entrypoint.sh
           # location of REST API permissions file
           'permissions.yaml': config/permissions-open.yaml
       meep-ingress-certs:
@@ -244,9 +248,6 @@ repo:
         codecov: true
         # supports linting
         lint: true
-        # location of API specification
-        api: 
-          meep-mon-engine: go-apps/meep-mon-engine/api/swagger.yaml
         # list of dependencies pods to monitor
         dependency-pods:
           # - meep-cert-manager
@@ -277,6 +278,15 @@ repo:
           - meep-sandbox-ctrl
           - meep-tc-engine
           - meep-app-enablement
+        # location of API specifications
+        api:
+          'meep-mon-engine.yaml': go-apps/meep-mon-engine/api/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
+        docker-data:
+          # location of entry script
+          'entrypoint.sh': go-apps/meep-mon-engine/entrypoint.sh
       meep-platform-ctrl:
         # location of source code
         src: go-apps/meep-platform-ctrl
@@ -296,13 +306,17 @@ repo:
         codecov: true
         # supports linting
         lint: true
-        # location of API specification
+        # location of API specifications
         api:
-          meep-platform-ctrl: go-apps/meep-platform-ctrl/api/swagger.yaml
-        # AdvantEDGE resources included in Docker container image
+          'meep-platform-ctrl.yaml': go-apps/meep-platform-ctrl/api/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
         docker-data:
-          # location of AdvantEDGE swagger files
-          swagger: bin/meep-platform-swagger-ui
+          # location of entry script
+          'entrypoint.sh': go-apps/meep-platform-ctrl/entrypoint.sh
+          # location of Swagger UI
+          swagger: js-apps/meep-swagger-ui
           # location of AdvantEDGE frontend
           frontend: bin/meep-frontend
       meep-virt-engine:
@@ -397,49 +411,6 @@ repo:
           meep-mon-engine-api: js-packages/meep-mon-engine-client
           meep-gis-engine-api: js-packages/meep-gis-engine-client
           meep-auth-svc-client: js-packages/meep-auth-svc-client
-      meep-platform-swagger-ui:
-        # location of source code
-        src: js-apps/meep-swagger-ui
-        # location of binary
-        bin: bin/meep-platform-swagger-ui
-        # enable meepctl build
-        build: true
-        # enable meepctl dockerize -> bundled with meep-platform-ctrl
-        dockerize: false
-        # enable meepctl deploy/delete -> deployed via meep-platform-ctrl
-        deploy: false
-        # supports linting
-        lint: false
-        # list of platform level swagger specs
-        api-bundle:
-          - core.go-apps.meep-auth-svc
-          - core.go-apps.meep-platform-ctrl
-          - core.go-apps.meep-mon-engine
-      meep-sandbox-swagger-ui:
-        # location of source code
-        src: js-apps/meep-swagger-ui
-        # location of binary
-        bin: bin/meep-sandbox-swagger-ui
-        # enable meepctl build
-        build: true
-        # enable meepctl dockerize -> bundled with meep-sandbox-ctrl
-        dockerize: false
-        # enable meepctl deploy/delete -> deployed via meep-sandbox-ctrl
-        deploy: false
-        # supports linting
-        lint: false
-        # list of sandbox level swagger specs
-        api-bundle:
-          - sandbox.go-apps.meep-sandbox-ctrl
-          - sandbox.go-apps.meep-gis-engine
-          - sandbox.go-apps.meep-loc-serv
-          - sandbox.go-apps.meep-rnis
-          - sandbox.go-apps.meep-wais
-          - sandbox.go-apps.meep-app-enablement
-          - sandbox.go-apps.meep-metrics-engine
-          - packages.go-packages.meep-metrics-engine-notification-client
-          - sandbox.go-apps.meep-mg-manager
-          - packages.go-packages.meep-mg-app-client
 
   #------------------------------
   #  Sandbox Subsystem
@@ -448,6 +419,38 @@ repo:
 
     # Go Applications
     go-apps:
+      meep-app-enablement:
+        # location of source code
+        src: go-apps/meep-app-enablement
+        # location of binary
+        bin: bin/meep-app-enablement
+        # location of deployment chart
+        chart: charts/meep-app-enablement
+        # user supplied value file located @ .meep/user/values (use below file name)
+        chart-user-values: meep-app-enablement.yaml
+        # extra build flags
+        build-flags:
+          - -mod=vendor
+        # enable meepctl build
+        build: true
+        # enable meepctl dockerize
+        dockerize: true
+        # enable meepctl deploy/delete
+        deploy: true
+        # supports code coverage measurement when built in codecov mode
+        codecov: false
+        # supports linting
+        lint: true
+        # location of API specifications
+        api:
+          'meep-app-support.yaml': go-apps/meep-app-enablement/api/app-support/swagger.yaml
+          'meep-service-mgmt.yaml': go-apps/meep-app-enablement/api/service-mgmt/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
+        docker-data:
+          # location of entry script
+          'entrypoint.sh': go-apps/meep-app-enablement/entrypoint.sh
       meep-gis-engine:
         # location of source code
         src: go-apps/meep-gis-engine
@@ -467,9 +470,15 @@ repo:
         codecov: true
         # supports linting
         lint: true
-        # location of API specification
+        # location of API specifications
         api:
-          meep-gis-engine: go-apps/meep-gis-engine/api/swagger.yaml
+          'meep-gis-engine.yaml': go-apps/meep-gis-engine/api/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
+        docker-data:
+          # location of entry script
+          'entrypoint.sh': go-apps/meep-gis-engine/entrypoint.sh
       meep-loc-serv:
         # location of source code
         src: go-apps/meep-loc-serv
@@ -492,9 +501,15 @@ repo:
         codecov: true
         # supports linting
         lint: true
-        # location of API specification
+        # location of API specifications
         api:
-          meep-loc-serv: go-apps/meep-loc-serv/api/swagger.yaml
+          'meep-loc-serv.yaml': go-apps/meep-loc-serv/api/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
+        docker-data:
+          # location of entry script
+          'entrypoint.sh': go-apps/meep-loc-serv/entrypoint.sh
       meep-metrics-engine:
         # location of source code
         src: go-apps/meep-metrics-engine
@@ -517,9 +532,16 @@ repo:
         codecov: true
         # supports linting
         lint: true
-        # location of API specification
+        # location of API specifications
         api:
-          meep-metrics-engine: go-apps/meep-metrics-engine/api/v2/swagger.yaml
+          'meep-metrics-engine.yaml': go-apps/meep-metrics-engine/api/v2/swagger.yaml
+          'meep-metrics-engine-notification-client.yaml': go-packages/meep-metrics-engine-notification-client/api/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
+        docker-data:
+          # location of entry script
+          'entrypoint.sh': go-apps/meep-metrics-engine/entrypoint.sh
       meep-mg-manager:
         # location of source code
         src: go-apps/meep-mg-manager
@@ -539,9 +561,16 @@ repo:
         codecov: true
         # supports linting
         lint: true
-        # location of API specification
+        # location of API specifications
         api:
-          meep-mg-manager: go-apps/meep-mg-manager/api/swagger.yaml
+          'meep-mg-manager.yaml': go-apps/meep-mg-manager/api/swagger.yaml
+          'meep-mg-app-client.yaml': go-packages/meep-mg-app-client/api/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
+        docker-data:
+          # location of entry script
+          'entrypoint.sh': go-apps/meep-mg-manager/entrypoint.sh
       meep-rnis:
         # location of source code
         src: go-apps/meep-rnis
@@ -564,9 +593,15 @@ repo:
         codecov: true
         # supports linting
         lint: true
-        # location of API specification
+        # location of API specifications
         api:
-          meep-rnis: go-apps/meep-rnis/api/swagger.yaml
+          'meep-rnis.yaml': go-apps/meep-rnis/api/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
+        docker-data:
+          # location of entry script
+          'entrypoint.sh': go-apps/meep-rnis/entrypoint.sh
       meep-wais:
         # location of source code
         src: go-apps/meep-wais
@@ -589,9 +624,15 @@ repo:
         codecov: true
         # supports linting
         lint: true
-        # location of API specification
+        # location of API specifications
         api:
-          meep-wais: go-apps/meep-wais/api/swagger.yaml
+          'meep-wais.yaml': go-apps/meep-wais/api/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
+        docker-data:
+          # location of entry script
+          'entrypoint.sh': go-apps/meep-wais/entrypoint.sh
       meep-sandbox-ctrl:
         # location of source code
         src: go-apps/meep-sandbox-ctrl
@@ -611,12 +652,17 @@ repo:
         codecov: true
         # supports linting
         lint: true
-        # location of API specification
+        # location of API specifications
         api:
-          meep-sandbox-ctrl: go-apps/meep-sandbox-ctrl/api/swagger.yaml
+          'meep-sandbox-ctrl.yaml': go-apps/meep-sandbox-ctrl/api/swagger.yaml
+        # location of user supplied API specifications
+        user-api:
+        # resources available to docker container image
         docker-data:
+          # location of entry script
           'entrypoint.sh': go-apps/meep-sandbox-ctrl/entrypoint.sh
-          swagger: bin/meep-sandbox-swagger-ui
+          # location of Swagger UI
+          swagger: js-apps/meep-swagger-ui
       meep-tc-engine:
         # location of source code
         src: go-apps/meep-tc-engine
@@ -651,32 +697,6 @@ repo:
         codecov: false
         # supports linting
         lint: true
-      meep-app-enablement:
-        # location of source code
-        src: go-apps/meep-app-enablement
-        # location of binary
-        bin: bin/meep-app-enablement
-        # location of deployment chart
-        chart: charts/meep-app-enablement
-        # user supplied value file located @ .meep/user/values (use below file name)
-        chart-user-values: meep-app-enablement.yaml
-        # extra build flags
-        build-flags:
-          - -mod=vendor
-        # enable meepctl build
-        build: true
-        # enable meepctl dockerize
-        dockerize: true
-        # enable meepctl deploy/delete
-        deploy: true
-        # supports code coverage measurement when built in codecov mode
-        codecov: false
-        # supports linting
-        lint: true
-        # location of API specification
-        api:
-          meep-app-support: go-apps/meep-app-enablement/api/app-support/swagger.yaml
-          meep-service-mgmt: go-apps/meep-app-enablement/api/service-mgmt/swagger.yaml
 
   #------------------------------
   #  Dependencies
@@ -894,17 +914,11 @@ repo:
         src: go-packages/meep-metrics-engine-notification-client
         # supports linting
         lint: false
-        # location of API specification
-        api: 
-          meep-metrics-engine-notification-client: go-packages/meep-metrics-engine-notification-client/api/swagger.yaml
       meep-mg-app-client:
         # location of source code
         src: go-packages/meep-mg-app-client
         # supports linting
         lint: false
-        # location of API specification
-        api: 
-          meep-mg-app-client: go-packages/meep-mg-app-client/api/swagger.yaml
       meep-mg-manager-client:
         # location of source code
         src: go-packages/meep-mg-manager-client
