--- a/charts/meep-app-enablement/values-template.yaml
+++ b/charts/meep-app-enablement/values-template.yaml
@@ -11,7 +11,8 @@ deployment:
       {{- if not .IsMepService }}
       - kube-dns
       {{- end }}
-    sandbox:
+    namespace:
+      - meep-sandbox-ctrl
 
 image:
   repository: meep-docker-registry:30001/meep-app-enablement
@@ -20,6 +21,7 @@ image:
   env:
     MEEP_INSTANCE_ID: {{.InstanceId}}
     MEEP_SANDBOX_NAME: {{.SandboxName}}
+    MEEP_SVC_PATH: /mec_app_support/v1
     MEEP_HOST_URL: {{.HostUrl}}
     {{- if .IsMepService }}
     MEEP_MEP_NAME: {{.MepName}}
@@ -45,11 +47,9 @@ ingress:
         {{- if .IsMepService }}
         - /{{.SandboxName}}/{{.MepName}}/mec_app_support
         - /{{.SandboxName}}/{{.MepName}}/mec_service_mgmt
-        - /{{.SandboxName}}/{{.MepName}}/app_info
         {{- else }}
         - /{{.SandboxName}}/mec_app_support
         - /{{.SandboxName}}/mec_service_mgmt
-        - /{{.SandboxName}}/app_info
         {{- end }}
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -58,12 +58,10 @@ ingress:
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/{{ .SandboxName }}/{{.MepName}}/mec_app_support(/|$)(.*)$ /mec_app_support/$2 break;
       rewrite ^/{{ .SandboxName }}/{{.MepName}}/mec_service_mgmt(/|$)(.*)$ /mec_service_mgmt/$2 break;
-      rewrite ^/{{ .SandboxName }}/{{.MepName}}/app_info(/|$)(.*)$ /app_info/$2 break;
     {{- else }}
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/{{ .SandboxName }}/mec_app_support(/|$)(.*)$ /mec_app_support/$2 break;
       rewrite ^/{{ .SandboxName }}/mec_service_mgmt(/|$)(.*)$ /mec_service_mgmt/$2 break;
-      rewrite ^/{{ .SandboxName }}/app_info(/|$)(.*)$ /app_info/$2 break;
     {{- end }}
     {{- if .AuthEnabled }}
     nginx.ingress.kubernetes.io/auth-url: https://$http_host/auth/v1/authenticate?svc=meep-app-enablement&sbox={{.SandboxName}}&mep={{.MepName}}
