--- a/charts/meep-metrics-engine/templates/deployment.yaml
+++ b/charts/meep-metrics-engine/templates/deployment.yaml
@@ -51,8 +51,15 @@ spec:
           {{- end}}
       terminationGracePeriodSeconds: 5
       initContainers:
-        - name: init-{{ .Values.deployment.dependency }}
+        {{- range $value := .Values.deployment.dependencies.system }}
+        - name: init-system-{{ $value }}
           image: busybox:1.28
           imagePullPolicy: IfNotPresent
-          command: ['sh', '-c', 'until nslookup {{ .Values.deployment.dependency }}.kube-system ; do echo waiting for {{ .Values.deployment.dependency }}; sleep 0.25; done;']
-
+          command: ['sh', '-c', 'until nslookup {{ $value }}.kube-system ; do echo waiting for {{ $value }}; sleep 0.25; done;']
+        {{- end}}
+        {{- range $value := .Values.deployment.dependencies.namespace }}
+        - name: init-{{ $value }}
+          image: busybox:1.28
+          imagePullPolicy: IfNotPresent
+          command: ['sh', '-c', 'until nslookup {{ $value }} ; do echo waiting for {{ $value }}; sleep 0.25; done;']
+        {{- end}}
