--- a/charts/meep-mg-manager/values-template.yaml
+++ b/charts/meep-mg-manager/values-template.yaml
@@ -8,7 +8,11 @@ deployment:
   replicas: 1
   port: 80
   protocol: TCP
-  dependency: kube-dns
+  dependencies:
+    system:
+      - kube-dns
+    namespace:
+      - meep-sandbox-ctrl
 
 affinity:
   nodeAffinity:
@@ -24,6 +28,7 @@ image:
   pullPolicy: Always
   env:
     MEEP_SANDBOX_NAME: {{ .SandboxName }}
+    MEEP_SVC_PATH: /mgm/v1
 
 service:
   name: meep-mg-manager
