--- a/charts/meep-mon-engine/values.yaml
+++ b/charts/meep-mon-engine/values.yaml
@@ -8,7 +8,11 @@ deployment:
   replicas: 1
   port: 80
   protocol: TCP
-  dependency: kube-dns
+  dependencies:
+    system:
+      - kube-dns
+    namespace:
+      - meep-platform-ctrl
 
 affinity:
   nodeAffinity:
@@ -23,6 +27,7 @@ image:
   tag: latest
   pullPolicy: Always
   env:
+    MEEP_SVC_PATH: /mon-engine/v1
     # Provide comma-separated list of expected pods to be monitored
     MEEP_DEPENDENCY_PODS: ""
     MEEP_CORE_PODS: ""
