--- a/charts/meep-platform-ctrl/values.yaml
+++ b/charts/meep-platform-ctrl/values.yaml
@@ -9,7 +9,10 @@ deployment:
   port: 80
   protocol: TCP
   altPort: 8080
-  dependency: kube-dns
+  dependencies:
+    system:
+      - kube-dns
+    namespace:
 
 affinity:
   nodeAffinity:
@@ -24,6 +27,7 @@ image:
   tag: latest
   pullPolicy: Always
   env:
+    MEEP_SVC_PATH: /platform-ctrl/v1
   envSecret:
 
 service:
@@ -36,6 +40,9 @@ ingress:
     - name: ''
       paths:
         - /
+        - /api
+        - /alt
+        - /alt/api
         - /platform-ctrl
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -68,7 +75,5 @@ user:
 
   swagger:
     enabled: false
-    location: "<WORKDIR>/user/swagger"
-    mountpath: "/user-swagger"
 
 meepOrigin: core
