--- a/charts/meep-wais/templates/deployment.yaml
+++ b/charts/meep-wais/templates/deployment.yaml
@@ -57,8 +57,8 @@ spec:
           imagePullPolicy: IfNotPresent
           command: ['sh', '-c', 'until nslookup {{ $value }}.kube-system ; do echo waiting for {{ $value }}; sleep 0.25; done;']
         {{- end}}
-        {{- range $value := .Values.deployment.dependencies.sandbox }}
-        - name: init-sandbox-{{ $value }}
+        {{- range $value := .Values.deployment.dependencies.namespace }}
+        - name: init-{{ $value }}
           image: busybox:1.28
           imagePullPolicy: IfNotPresent
           command: ['sh', '-c', 'until nslookup {{ $value }} ; do echo waiting for {{ $value }}; sleep 0.25; done;']
