--- a/config/permissions-secure.yaml
+++ b/config/permissions-secure.yaml
@@ -143,6 +143,13 @@ fileservers:
 # #        roles:                         # role-specific permissions
 # #          admin: 'allow|block'
 # #          user: 'allow|block'
+# #    fileservers:                       # Service fileserver permissions (overrides default)
+# #      - name 'fs-name'                 # fileserver name
+# #        path: '/fs-endpoint/path'      # fileserver endpoint path
+# #        mode: 'allow|block|verify'     # access authorization mode
+# #        roles:                         # role-specific permissions
+# #          admin: 'allow|block'
+# #          user: 'allow|block'
 # #------------------------------------------------------------------------------
 services:
   #------------------------------
