--- a/charts/meep-wais/values-template.yaml
+++ b/charts/meep-wais/values-template.yaml
@@ -55,6 +55,8 @@ ingress:
         {{- end }}
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
     nginx.ingress.kubernetes.io/force-ssl-redirect: {{ .HttpsOnly }}
     {{- if .IsMepService }}
     nginx.ingress.kubernetes.io/configuration-snippet: |
