sandbox-ctrl services endpoint implementation

--- a/config/permissions-open.yaml
+++ b/config/permissions-open.yaml
@@ -770,6 +770,13 @@ default:
 #         path: '/events/{type}'
 #         method: 'POST'
 #         mode: 'allow'
+#       - name: 'ServicesGET'
+#         path: '/services'
+#         method: 'GET'
+#         mode: 'verify'
+#         roles:
+#           admin: 'allow'
+#           user: 'allow'
 #   #------------------------------
 #   #  WAI Service (Sbox)
 #   #------------------------------
