address demo 3 comments

--- a/examples/demo3/src/backend/util/mep2.yaml
+++ b/examples/demo3/src/backend/util/mep2.yaml
@@ -1,6 +1,6 @@
 mode: 'sandbox'
-sandbox: 'http://'
-mecplatform: 'mep2'
-appid: 'cb7a6606-4718-46fd-b19e-78c915726bb2'
-localurl: 'http://'
-port: ':8094'
+sandbox: 'http://10.190.115.162/sbx-gh-miki/mep1'
+mecplatform: 'mep1'
+appid: 'e36bbc4f-11d3-4526-abf4-7b2a922c7685'
+localurl: 'http://10.190.115.162'
+port: '8093'
