--- a/charts/meep-mg-manager/templates/ingress.yaml
+++ b/charts/meep-mg-manager/templates/ingress.yaml
@@ -2,7 +2,7 @@
 {{- $serviceName := include "meep-mg-manager.fullname" . -}}
 {{- $servicePort := .Values.service.port -}}
 {{- $path := .Values.ingress.path -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ template "meep-mg-manager.fullname" . }}
