--- a/charts/meep-webhook/templates/mutatingwebhook.yaml
+++ b/charts/meep-webhook/templates/mutatingwebhook.yaml
@@ -17,3 +17,4 @@ webhooks:
         resources: ["deployments", "statefulsets"]
     admissionReviewVersions: ["v1", "v1beta1"]
     sideEffects: None
+    failurePolicy: Ignore
