--- a/charts/meep-ingress-certs/templates/le-ingress.yaml
+++ b/charts/meep-ingress-certs/templates/le-ingress.yaml
@@ -19,9 +19,12 @@ spec:
     - http:
         paths:
           - path: "/letsencrypt/"
+            pathType: ImplementationSpecific
             backend:
-              serviceName: {{ .Values.letsEncrypt.defaultBackend.service.name }}
-              servicePort: {{ .Values.letsEncrypt.defaultBackend.service.port }}
+              service:
+                name: {{ .Values.letsEncrypt.defaultBackend.service.name }}
+                port:
+                  number: {{ .Values.letsEncrypt.defaultBackend.service.port }}
   tls:
     - secretName: {{ .Values.letsEncrypt.tls.secret }}
       hosts:
