--- a/charts/meep-loc-serv/templates/ingress.yaml
+++ b/charts/meep-loc-serv/templates/ingress.yaml
@@ -24,9 +24,12 @@ spec:
         paths:
           {{- range $path := .paths }}
           - path: {{ $path }}
+            pathType: ImplementationSpecific
             backend:
-              serviceName: {{ $serviceName }}
-              servicePort: {{ $servicePort }}
+              service:
+                name: {{ $serviceName }}
+                port:
+                  number: {{ $servicePort }}
           {{- end -}}
       {{- if .name }}
       host: {{ .name }}
